Closed Bug 470595 Opened 16 years ago Closed 16 years ago

[@ strlen - nsComponentManagerImpl::IsContractIDRegistered]

Categories

(Core :: XPCOM, defect)

x86
Windows XP
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla1.9.2a1

People

(Reporter: timeless, Assigned: timeless)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

I found this while scanning crash reports:

testcase:
Components.manager.nsIComponentRegistrar.isContractIDRegistered(null)

there are a bunch of other crashes available in here....
Attached patch patchSplinter Review
testcase:
Components.manager.nsIComponentManager.createInstanceByContractID(null, null, Components.interfaces.nsISupports)

Components.manager.nsIComponentManager.getClassObjectByContractID(null, Components.interfaces.nsISupports)
Attachment #354006 - Flags: review?(ted.mielczarek)
Comment on attachment 354006 [details] [diff] [review]
patch

Ted's not an XPCOM peer...
Attachment #354006 - Flags: review?(ted.mielczarek) → review+
http://hg.mozilla.org/mozilla-central/rev/9a4bf340c1e3
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2a1
Crash Signature: [@ strlen - nsComponentManagerImpl::IsContractIDRegistered]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: