xpcom/components/nsComponentManager.cpp
@@ -1449,6 +1449,9 @@ nsComponentManagerImpl::GetClassObjectByContractID(const char *contractID,
                                                    const nsIID &aIID,
                                                    void **aResult)
 {
+    NS_ENSURE_ARG_POINTER(aResult);
+    NS_ENSURE_ARG_POINTER(contractID);
+
     nsresult rv;
 
     nsCOMPtr<nsIFactory> factory;
@@ -1459,8 +1462,6 @@ nsComponentManagerImpl::GetClassObjectByContractID(const char *contractID,
         PR_LogPrint("nsComponentManager: GetClassObject(%s)", contractID);
     }
 #endif
-
-    PR_ASSERT(aResult != nsnull);
 
     rv = FindFactory(contractID, strlen(contractID), getter_AddRefs(factory));
     if (NS_FAILED(rv)) return rv;
@@ -1482,13 +1483,8 @@ nsComponentManagerImpl::GetClassObjectByContractID(const char *contractID,
 NS_IMETHODIMP
 nsComponentManagerImpl::ContractIDToClassID(const char *aContractID, nsCID *aClass)
 {
-    NS_PRECONDITION(aContractID != nsnull, "null ptr");
-    if (!aContractID)
-        return NS_ERROR_NULL_POINTER;
-
-    NS_PRECONDITION(aClass != nsnull, "null ptr");
-    if (!aClass)
-        return NS_ERROR_NULL_POINTER;
+    NS_ENSURE_ARG_POINTER(aContractID);
+    NS_ENSURE_ARG_POINTER(aClass);
 
     nsresult rv = NS_ERROR_FACTORY_NOT_REGISTERED;
 
@@ -1640,6 +1636,8 @@ nsComponentManagerImpl::CreateInstanceByContractID(const char *aContractID,
                                                    const nsIID &aIID,
                                                    void **aResult)
 {
+    NS_ENSURE_ARG_POINTER(aContractID);
+
     // test this first, since there's no point in creating a component during
     // shutdown -- whether it's available or not would depend on the order it
     // occurs in the list
@@ -1999,6 +1997,7 @@ NS_IMETHODIMP
 nsComponentManagerImpl::RegisterService(const char* aContractID,
                                         nsISupports* aService)
 {
+    NS_ENSURE_ARG_POINTER(aContractID);
 
     nsAutoMonitor mon(mMon);
 
@@ -3457,6 +3456,7 @@ NS_IMETHODIMP
 nsComponentManagerImpl::IsContractIDRegistered(const char *aClass,
                                                PRBool *_retval)
 {
+    NS_ENSURE_ARG_POINTER(aClass);
     nsFactoryEntry *entry = GetFactoryEntry(aClass, strlen(aClass));
 
     if (entry)
